# fw-tedana

./: Dockerfile  README.md  manifest.json  pyproject.toml  run.py
fw_gear_tedana/: main.py  parser.py
utils/: zip_htmls.py
