[tool.poetry]
name = "fw-gear-tedana"
version = "0.0."
description = "tedana"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/bids-qsiprep"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.8.10"
flywheel-gear-toolkit = "^0.6.13"
flywheel-sdk = "^16.8.0"
psutil = "^5.9.0"
beautifulsoup4 = "^4.11.1"
errorhandler = "^2.0.1"
nibabel = "^5.0.0"
nipype = "^1.8.5"
nilearn = "^0.10.0"
mapca = "^0.0.3"
duecredit = "^0.9.2"
pandas = "^2.0"
tedana = "^23.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^22.3.0"
isort = "^5.6.4"
pylint = "^2.13.3"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
mypy = "^0.942"
ipython = "^8.0.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
